<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/track_trace"
        android:icon="@drawable/ic_track_trace"
        android:title="@string/track_and_trace" />
    <item
        android:id="@+id/postageCalculatorSubmit"
        android:icon="@drawable/ic_calculator"
        android:title="@string/postage_calculator" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit"
        android:title="Logout"/>
</menu>