<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication3.postage.PostageInfoFragment">

    <!-- VOLUMETRIC (CM^3) -->
    <TextView
        android:id="@+id/volumetric_"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/volumetric_"
        android:textAppearance="@style/volumetric_"
        android:gravity="center_horizontal|center_vertical" />

    <!-- VOLUMETRIC (CM^3) -->
    <TextView
        android:id="@+id/volumetric"
        android:layout_width="208dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/volumetric"
        android:background="@drawable/volumetric"
        android:textAppearance="@style/volumetric"
        android:gravity="center_horizontal|center_vertical" />

    <!-- WEIGHT (KG) -->

    <!-- WEIGHT (KG) -->

    <!-- Rect Browse -->
    <View
        android:id="@+id/rect_browse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:background="@drawable/rect_view" />

    <!-- RECIPIENT NAME -->
    <TextView
        android:id="@+id/showinfo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:text="@string/showinfo"
        android:textAppearance="@style/volumetric_"
        android:gravity="center_horizontal|center_vertical" />


    <TextView
        android:id="@+id/recipient_n"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:text="@string/recipient_n"
        android:textAppearance="@style/sign_in"
        android:background="@drawable/rect_view"
        android:gravity="center_horizontal|center_vertical" />

    <!--PHONE NUMBER-->
    <TextView
        android:id="@+id/phone_number"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="249dp"
        android:text="@string/phone_number"
        android:textAppearance="@style/sign_in"
        android:background="@drawable/rect_view"
        android:gravity="center_horizontal|center_vertical" />

    <!-- STREET ADDRESS -->
    <EditText
        android:id="@+id/street_address"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="298dp"
        android:hint="@string/street_address"
        android:autofillHints="@string/street_address"
        android:background="@drawable/recipient"
        android:textAppearance="@style/recipient_n"
        android:gravity="center_horizontal|center_vertical" />

    <!-- CITY/TOWN -->
    <EditText
        android:id="@+id/city_town"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="347dp"
        android:hint="@string/city_town"
        android:autofillHints="@string/city_town"
        android:textAppearance="@style/recipient_n"
        android:background="@drawable/recipient"
        android:gravity="center_horizontal|center_vertical" />

    <!-- STATE -->
    <EditText
        android:id="@+id/stateinfo"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="396dp"
        android:hint="@string/stateinfo"
        android:autofillHints="@string/stateinfo"
        android:textAppearance="@style/recipient_n"
        android:background="@drawable/recipient"
        android:gravity="center_horizontal|center_vertical" />

    <!-- POSTCODE -->
    <EditText
        android:id="@+id/postcodeinfo"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="445dp"
        android:hint="@string/postcodeinfo"
        android:autofillHints="@string/postcodeinfo"
        android:textAppearance="@style/recipient_n"
        android:background="@drawable/recipient"
        android:gravity="center_horizontal|center_vertical" />


    <!-- SAVE AS DRAFT -->
    <Button
        android:id="@+id/save_as_dra"
        android:layout_width="317dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="520dp"
        android:text="@string/save_as_dra"
        android:textAppearance="@style/sign_in"
        android:background="@drawable/save_draft"
        android:gravity="center_horizontal|center_vertical" />

</RelativeLayout>