<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileSetting">

    <!-- Rect Browse -->
    <View
        android:id="@+id/rect_browse"
        android:layout_width="match_parent"
        android:layout_height="535dp"
        android:background="@drawable/rect_profile_set" />

    <!-- Ellipse 1 -->
    <ImageButton
        android:id="@+id/ellipse_1"
        android:layout_width="98dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/ellipse_2" />

    <!-- Name -->
    <TextView
        android:id="@+id/name"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:text="@string/name"
        android:textAppearance="@style/name"
        android:background="@drawable/name_button"
        android:gravity="center_horizontal|center_vertical" />

    <!-- ACCOUNT ID -->
    <TextView
        android:id="@+id/email_id"
        android:layout_width="208dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:text="@string/email_id"
        android:textAppearance="@style/volumetric_"
        android:gravity="center_horizontal|center_vertical" />

    <!-- CURRENT PASSWORD -->
    <TextView
        android:id="@+id/current_pas"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="321dp"
        android:text="@string/current_pas"
        android:textAppearance="@style/current_pas"
        android:background="@drawable/current_pas_text"
        android:gravity="center_horizontal|center_vertical" />

    <!-- NEW PASSWORD -->
    <TextView
        android:id="@+id/new_password"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="366dp"
        android:text="@string/new_password"
        android:textAppearance="@style/current_pas"
        android:background="@drawable/current_pas_text"
        android:gravity="center_horizontal|center_vertical" />

    <!-- CONFIRM PASSWORD -->
    <TextView
        android:id="@+id/confirm_pas"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="411dp"
        android:text="@string/confirm_pas"
        android:textAppearance="@style/current_pas"
        android:background="@drawable/current_pas_text"
        android:gravity="center_horizontal|center_vertical" />

    <!-- SAVE -->
    <TextView
        android:id="@+id/save"
        android:layout_width="167dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="505dp"
        android:text="@string/save"
        android:textAppearance="@style/save"
        android:background="@drawable/save_button"
        android:gravity="center_horizontal|center_vertical" />

</RelativeLayout>