<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication3.postage.PostageCalculatorSubmit">

    <!-- LENGTH (CM) -->
    <TextView
        android:id="@+id/length_cm_"
        android:layout_width="335dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="221dp"
        android:text="@string/length_cm_"
        android:textAppearance="@style/length_cm_"
        android:background="@drawable/length"
        android:gravity="center_horizontal|center_vertical"
        />

    <!-- WIDTH (CM) -->
    <TextView
        android:id="@+id/width_cm_"
        android:layout_width="334dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="269dp"
        android:text="@string/width_cm_"
        android:textAppearance="@style/length_cm_"
        android:background="@drawable/width"
        android:gravity="center_horizontal|center_vertical"
        />

    <!-- HEIGHT (CM) -->
    <TextView
        android:id="@+id/height_cm_"
        android:layout_width="334dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="315dp"
        android:text="@string/height_cm_"
        android:textAppearance="@style/length_cm_"
        android:background="@drawable/width"
        android:gravity="center_horizontal|center_vertical"
        />

    <!-- SUBMIT -->
    <TextView
        android:id="@+id/submit"
        android:layout_width="317dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="411dp"
        android:text="@string/submit"
        android:textAppearance="@style/submit"
        android:background="@drawable/submit_button"
        android:gravity="center_horizontal|center_vertical"
        />

</RelativeLayout>