<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <!-- Rect Browse -->
    <View
        android:id="@+id/rect_browse"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rect_profile"
        android:layout_alignParentStart="true" />

    <!-- NAME -->
    <TextView
        android:id="@+id/name"
        android:layout_width="171dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="129dp"
        android:text="@string/name"
        android:textAppearance="@style/volumetric_"
        android:gravity="center_horizontal|center_vertical" />

    <!-- ACCOUNT ID -->
    <TextView
        android:id="@+id/account_id"
        android:layout_width="208dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="153dp"
        android:text="@string/account_id"
        android:textAppearance="@style/volumetric_"
        android:gravity="center_horizontal|top" />

    <!-- Rectangle 4 -->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="316dp"
        android:layout_height="83dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:background="@drawable/rectangle_4" />

    <!-- Address -->
    <TextView
        android:id="@+id/address"
        android:layout_width="75dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="76dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="208dp"
        android:text="@string/address"
        android:textAppearance="@style/address"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="76dp" />

    <!-- Notification -->
    <TextView
        android:id="@+id/notification"
        android:layout_width="75dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="243dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="207dp"
        android:text="@string/notification"
        android:textAppearance="@style/address"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="243dp" />

    <!-- HISTORY -->
    <Button
        android:id="@+id/history"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="297dp"
        android:text="@string/history"
        android:textAppearance="@style/history"
        android:background="@drawable/history_button"
        android:gravity="center_horizontal|center_vertical" />

    <!-- PROFILE SETTING -->
    <Button
        android:id="@+id/profile_set"
        android:layout_width="308dp"
        android:layout_height="56dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="388dp"
        android:text="@string/profile_set"
        android:textAppearance="@style/history"
        android:background="@drawable/history_button"
        android:gravity="center_horizontal|center_vertical" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        app:srcCompat="@android:drawable/ic_dialog_map"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/icon_address" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="75dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        app:srcCompat="@android:drawable/ic_popup_reminder"
        android:layout_alignParentStart="true"
        android:layout_marginStart="200dp" />

    <!-- Ellipse 2 -->
    <ImageButton
        android:id="@+id/ellipse_2"
        android:layout_width="98dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ellipse_2" />

</RelativeLayout>