<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <!-- Rectangle Inside -->
    <View
        android:id="@+id/rectangle_i"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_i" />

    <!-- Rectangle Outside -->
    <View
        android:id="@+id/rectangle_o"
        android:layout_width="match_parent"
        android:layout_height="404dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:background="@drawable/rectangle_o"
        android:layout_alignParentStart="true" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <!-- USERNAME -->
    <EditText
        android:id="@+id/username"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="290dp"
        android:hint="@string/username"
        android:textAppearance="@style/username"
        android:background="@drawable/text_box"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:autofillHints="@string/username"
        android:inputType="textPersonName" />

    <!-- EMAIL ADDRESS -->
    <EditText
        android:id="@+id/email"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="346dp"
        android:hint="@string/email"
        android:textAppearance="@style/password"
        android:inputType="textEmailAddress"
        android:background="@drawable/text_box"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:autofillHints="@string/email"/>

    <!-- PASSWORD -->
    <EditText
        android:id="@+id/password"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="401dp"
        android:hint="@string/password"
        android:textAppearance="@style/password"
        android:inputType="textPassword"
        android:background="@drawable/text_box"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:autofillHints="@string/password" />

    <!-- CONFIRM PASSWORD -->
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="309dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="457dp"
        android:hint="@string/confirm_password"
        android:textAppearance="@style/password"
        android:inputType="textPassword"
        android:background="@drawable/text_box"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:autofillHints="@string/confirm_password" />

    <!-- REGISTER -->
    <Button
        android:id="@+id/register"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="111dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="512dp"
        android:text="@string/register"
        android:textAppearance="@style/sign_in"
        android:background="@drawable/rectangle_7"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="114dp" />

    <!-- Rectangle 8 -->
    <Button
        android:id="@+id/rectangle_8"
        android:layout_width="165dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rectangle_8"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/already_hav"
        android:textAllCaps="false"
        android:textAppearance="@style/already_hav"
        android:textSize="14sp" />

</RelativeLayout>